Add originalUrl to AppView entry items
